bk_ida/sjengida/g0/HandlePtell
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/HandlePtell/src/partner.c:549:27: error: use of undeclared identifier 'off_423B32'
if ( !strncmp( input + 6, off_423B32, 3uLL) ) 
                          ^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/HandlePtell/src/partner.c:617:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/HandlePtell/src/partner.c:758:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
3 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/HandlePtell/src/obj/partner.o] Error 1
